[feat]Ability: A more proper ability system.
- Reworked the ability system to allow a more proper ability implementation (by @StartForKiller )
- Adds a sample implementation for projectors (mostly unused gadget) (by @StartForKiller )
- Small fixes to suites and dynamic groups (by @StartForKiller )